added current day

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
     <div class="card">
       <div class="row" id="row1">
-        <div class="col-md-1" id="7am">1:00</div>
+        <div class="col-md-1" id="1pm">1:00</div>
         <input type="text" class="col-md-10" id="select1">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
       <div class="row" id="row2">
-        <div class="col-md-1" id="7am">2:00</div>
+        <div class="col-md-1" id="2pm">2:00</div>
         <input type="text" class="col-md-10" id="select2">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
