--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <h2>Current Time &amp; Date:</h2>
+      <h3 id="now">00:00:00</h3>
     </header>
   <div class="container">
     <div class="card">
