--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
 
     <div class="card">
       <div class="row" id="row3">
-        <div class="col-md-1" id="3am">3:00</div>
+        <div class="col-md-1" id="3pm">3:00</div>
         <input type="text" class="col-md-10" id="select3">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
       <div class="row" id="row4">
-        <div class="col-md-1" id="4am">4:00</div>
+        <div class="col-md-1" id="4pm">4:00</div>
         <input type="text" class="col-md-10" id="select4">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
       <div class="row" id="row5">
-        <div class="col-md-1" id="5am">5:00</div>
+        <div class="col-md-1" id="5pm">5:00</div>
         <input type="text" class="col-md-10" id="select5">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
       </div>
