couldnt get colors to work

--- a/index.html
+++ b/index.html
@@ -26,70 +26,70 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <h2>Current Time &amp; Date:</h2>
-      <h3 id="now">00:00:00</h3>
+      <h2>Current Date:</h2>
+      <h3 class="text-center" id="todaysDate"></h3>
     </header>
   <div class="container">
     <div class="card">
-      <div class="row " id="row09">
-        <div class="col-md-1" id="9am">9:00</div>
-        <input type="text" class="col-md-10" id="select9">
+      <div class="row ">
+        <div class="col-md-1" id="9">9:00</div>
+        <input type="text-form" class="col-md-10" id="hour9">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row " id="row10">
-        <div class="col-md-1" id="10am">10:00</div>
-        <input type="text" class="col-md-10" id="select10">
+      <div class="row ">
+        <div class="col-md-1" id="10">10:00</div>
+        <input type="text-form" class="col-md-10" id="hour10">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row11">
-        <div class="col-md-1" id="11am">11:00</div>
-        <input type="text" class="col-md-10" id="select11">
+      <div class="row" >
+        <div class="col-md-1" id="11">11:00</div>
+        <input type="text-form" class="col-md-10" id="hour11">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row12">
-        <div class="col-md-1" id="12pm">12:00</div>
-        <input type="text" class="col-md-10" id="select12">
+      <div class="row" >
+        <div class="col-md-1"="12">12:00</div>
+        <input type="text-form" class="col-md-10" id="hour12">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row1">
-        <div class="col-md-1" id="1pm">1:00</div>
-        <input type="text" class="col-md-10" id="select1">
+      <div class="row">
+        <div class="col-md-1" id="13">1:00</div>
+        <input type="text-form" class="col-md-10" id="hour13">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row2">
-        <div class="col-md-1" id="2pm">2:00</div>
-        <input type="text" class="col-md-10" id="select2">
+      <div class="row">
+        <div class="col-md-1" id="14">2:00</div>
+        <input type="text-form" class="col-md-10" id="hour14">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row3">
-        <div class="col-md-1" id="3pm">3:00</div>
-        <input type="text" class="col-md-10" id="select3">
+      <div class="row">
+        <div class="col-md-1" id="15">3:00</div>
+        <input type="text-form" class="col-md-10" id="hour15">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row4">
-        <div class="col-md-1" id="4pm">4:00</div>
-        <input type="text" class="col-md-10" id="select4">
+      <div class="row">
+        <div class="col-md-1" id="16">4:00</div>
+        <input type="text-form" class="col-md-10" id="hour16">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
     </div>
 
     <div class="card">
-      <div class="row" id="row5">
-        <div class="col-md-1" id="5pm">5:00</div>
-        <input type="text" class="col-md-10" id="select5">
+      <div class="row">
+        <div class="col-md-1" id="17">5:00</div>
+        <input type="text-form" class="col-md-10" id="hour17">
         <button type="button" class="btn btn-primary saveBtn"> Save</button>
       </div>
 
